--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           skilled in database management utilizing JPA and other ORM
           technologies. In addition, I have experience with unit testing with
           JUnit and Mockito and am aware about CI/CD processes utilizing Gradle,
-          Maven, and Jenkins. My expertise also includes AWS, where I have
+          Maven, and Jenkins, Docker and Kubernetes. My expertise also includes AWS, where I have
           created and implemented a number of cloud-based applications.
         </p>
         <div class="social-media">
