--- a/about-me.html
+++ b/about-me.html
@@ -76,7 +76,7 @@
 
       <h3>University of North Texas</h3>
       <p>
-        <strong>Graduate Assistant</strong>
+        <strong>Treasury Student Intern</strong>
       </p>
       <ul>
         <li>
